@@ -29,6 +29,16 @@
 }
 
 /**
+ * Length control
+ */
+
+.lipnamo-length-control input {margin:0 0 1em;}
+.lipnamo-length-control label, .lipnamo-length-control select {
+    display:inline-block;min-width:10em;vertical-align:middle;
+    margin:.35em 0 .75em !important;
+}
+
+/**
  * Progress Bar
  */
 
