@@ -3,6 +3,7 @@
 = 1.1.0 =
 *Release Date - 22 Septempber 2021*
 
+* New: Add option to control length of dummy text for Title, Excerpt and Content.
 * Changed: Add option to prevent deleting generated items but still cleanup database.
 * Fixed: Check database table exists before creating the new one.
 
